Release notes for Galant, most recent first.

v5.4 (upcoming)

User

- selected edges are dashed during editing, nodes are shaded cyan

- visibility of labels/weights on nodes/edges can be toggled during execution, either by the algorithm or by the user

- faster reaction to display state changes

- elimination of a bug that caused Galant to hang if animation was terminated
  during an active query

Animator

- functions getNode(String prompt, NodeSet set, String errorMessage) and the
  corresponding one for edges, to prompt the user for a node/edge and require
  that it be in a specified set; the errorMessage is reported if the
  node/edge is not in the set

- new NodePriorityQueue and EdgePriorityQueue methods as well as ability to
  define a max heap using an optional boolean argument; these include
  removeMax, removeBest and changeKey (as an alternative to decreaseKey)

- more protection from Java null pointer and other low level exceptions

Developer

- put NodePriorityQueue and EdgePriorityQueue into the graph.container package