@@ -11,17 +11,16 @@ NodeSet unvisited;
 function visit( Node v ) {
     unvisited.remove(v);
     time = time + 1;
-    beginStep();
+    step();
     set(v, "discovery", time);
     Integer discovered_v
         = getInteger(v, "discovery");
     label(v, time);
     select(v);
-    endStep();
     for_outgoing( v, e, w ) {
         Integer finished_w
             = getInteger(w, "finish");
-        beginStep();
+        step();
         color(e, BLUE);
         if ( ! selected(w) ) {
             highlight(e);
@@ -39,18 +38,15 @@ function visit( Node v ) {
         else {
             label(e, "C");
         }
-        endStep();
-        beginStep();
+        step();
         uncolor(e);
-        endStep();
     } // end, traversing adj list
     time = time + 1;
     set(v, "finish", time);
-    beginStep();
+    step();
     mark(v);
     label(v, discovered_v
           + "/" + time);
-    endStep();
 }
 
 algorithm {
@@ -62,16 +58,16 @@ algorithm {
     showEdgeLabels();
     clearNodeLabels();
     clearEdgeLabels();
-    endStep();
 
     unvisited = getNodeSet();
     while ( ! unvisited.isEmpty() ) {
         Node u
             = getNode("node to visit",
                       unvisited,
-                      "node already visited"); 
+                      "node already visited");
+        step();
         visit(u);
     }
 }
 
-//  [Last modified: 2016 10 26 at 17:40:51 GMT]
+//  [Last modified: 2016 11 18 at 17:18:20 GMT]
